--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="cinzatema">#1B1B1B</color>
+    <color name="verdedinheiro">#006D07</color>
+    <color name="vermelhodinheiro">#FE0000</color>
+    <color name="fundo">#E9E7F4</color>
 </resources>
