--- a/app/src/main/res/layout/fragment_casa.xml
+++ b/app/src/main/res/layout/fragment_casa.xml
@@ -1,89 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="top"
     android:orientation="vertical"
-    android:paddingLeft="10dp"
-    android:paddingTop="5dp"
-    android:paddingRight="10dp"
-    android:paddingBottom="5dp"
+
     tools:context=".CasaFragment">
 
-    <android.support.v7.widget.CardView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardElevation="0dp"
-        app:cardCornerRadius="10dp">
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="match_parent"
-            android:layout_height="256dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/mdl1home" />
-    </android.support.v7.widget.CardView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="161dp"
-        android:orientation="horizontal"
-        android:background="@drawable/borda10"
-        android:paddingLeft="20dp"
-        android:paddingTop="10dp"
-        android:paddingRight="20dp"
-        android:paddingBottom="10dp">
-
-        <ImageView
-            android:id="@+id/imageView8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/mdl2" />
+        android:layout_height="match_parent">
 
         <LinearLayout
-            android:layout_width="456dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="left|center_vertical"
-            android:orientation="vertical">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingLeft="10dp"
+            android:paddingTop="5dp"
+            android:paddingRight="10dp"
+            android:paddingBottom="5dp">
 
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="match_parent"
-                android:layout_height="49dp"
-                android:gravity="center_vertical"
-                android:text="@string/exemplotexto"
-                android:textSize="12sp" />
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="match_parent"
-                android:layout_height="34dp"
-                android:gravity="center_vertical"
-                android:text="de R$ 400,00 por:"
-                android:textSize="10sp" />
-
-            <TextView
-                android:id="@+id/textView4"
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:text="R$ 200,00 a VISTA"
-                android:textSize="16sp" />
+                android:layout_marginBottom="20dp"
+
+                app:cardCornerRadius="10dp"
+                app:cardElevation="0dp">
+
+                <ImageView
+                    android:id="@+id/imgvCasa1"
+                    android:layout_width="match_parent"
+                    android:layout_height="256dp"
+                    android:scaleType="fitCenter" />
+
+            </android.support.v7.widget.CardView>
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/textView17"
                 android:layout_width="match_parent"
-                android:layout_height="27dp"
-                android:gravity="center_vertical"
-                android:text="em até 10x de R$20,00 sem juros no cartão"
-                android:textSize="8sp" />
+                android:layout_height="46dp"
+                android:text="Produtos" />
+
+            <LinearLayout
+                android:id="@+id/layoutContcasa"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:id="@+id/cntnrProduto"
+                    android:layout_width="match_parent"
+                    android:layout_height="161dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@drawable/borda10"
+                    android:orientation="horizontal"
+                    android:paddingLeft="20dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="20dp"
+                    android:paddingBottom="10dp">
+
+                    <ImageView
+                        android:id="@+id/cntnrProdutoimagem"
+                        android:layout_width="100dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="10dp"
+                        android:src="@drawable/mdl2" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="left|center_vertical"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/cntnrProdutonome"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:ellipsize="end"
+                            android:gravity="center_vertical"
+                            android:maxLines="3"
+                            android:text="@string/exemplotexto"
+                            android:textSize="12sp" />
+
+                        <TextView
+                            android:id="@+id/cntnrProdutovalordes"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:fontFamily="sans-serif"
+                            android:gravity="center_vertical"
+                            android:text="de R$ 400,00 por:"
+                            android:textSize="10sp" />
+
+                        <TextView
+                            android:id="@+id/cntnrProdutovalor"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="center_vertical"
+                            android:text="R$ 200,00 a VISTA"
+                            android:textSize="16sp" />
+
+                        <TextView
+                            android:id="@+id/textView2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="center_vertical"
+                            android:text="em até 10x de R$20,00 sem juros no cartão"
+                            android:textSize="8sp" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+            </LinearLayout>
 
         </LinearLayout>
+    </ScrollView>
 
-    </LinearLayout>
-
-</LinearLayout>
+</FrameLayout>
