--- a/app/src/main/res/layout/fragment_detalhes.xml
+++ b/app/src/main/res/layout/fragment_detalhes.xml
@@ -57,6 +57,48 @@
                 android:paddingRight="10dp"
                 android:paddingBottom="5dp">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:orientation="horizontal">
+
+                    <ImageButton
+                        android:id="@+id/imageButton9"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:backgroundTint="@android:color/transparent"
+                        android:scaleType="fitCenter"
+                        tools:src="@tools:sample/avatars" />
+
+                    <ImageButton
+                        android:id="@+id/imageButton8"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:backgroundTint="@android:color/transparent"
+                        android:scaleType="fitCenter"
+                        tools:src="@tools:sample/avatars" />
+
+                    <ImageButton
+                        android:id="@+id/imageButton7"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:backgroundTint="@android:color/transparent"
+                        android:scaleType="fitCenter"
+                        tools:src="@tools:sample/avatars" />
+
+                    <ImageButton
+                        android:id="@+id/imageButton6"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:backgroundTint="@android:color/transparent"
+                        android:scaleType="fitCenter"
+                        tools:src="@tools:sample/avatars" />
+                </LinearLayout>
+
                 <TextView
                     android:id="@+id/textView19"
                     android:layout_width="match_parent"
@@ -79,6 +121,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:gravity="left|center_vertical"
                         android:text="TextView" />
 
                     <TextView
@@ -86,6 +129,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:gravity="right|center_vertical"
                         android:text="TextView" />
                 </LinearLayout>
 
@@ -158,7 +202,7 @@
                 <Button
                     android:id="@+id/button9"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="56dp"
                     android:backgroundTint="@color/verdedinheiro"
                     android:text="Adicionar ao Carrinho"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -168,28 +212,31 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="125dp"
                     android:orientation="vertical"
                     android:padding="10dp">
 
-                    <FrameLayout
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textView42"
+                            android:id="@+id/textView5"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="left|center_vertical"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="left|center_vertical"
                             android:text="TextView" />
 
                         <TextView
-                            android:id="@+id/textView41"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="right|center_vertical"
+                            android:id="@+id/textView4"
+                            android:layout_width="80dp"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
                             android:text="TextView" />
-                    </FrameLayout>
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/textView45"
@@ -197,24 +244,27 @@
                         android:layout_height="1dp"
                         android:background="@color/black50" />
 
-                    <FrameLayout
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textView44"
+                            android:id="@+id/textView7"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="left|center_vertical"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="left|center_vertical"
                             android:text="TextView" />
 
                         <TextView
-                            android:id="@+id/textView43"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="right|center_vertical"
+                            android:id="@+id/textView8"
+                            android:layout_width="80dp"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
                             android:text="TextView" />
-                    </FrameLayout>
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/textView46"
@@ -222,30 +272,34 @@
                         android:layout_height="1dp"
                         android:background="@color/black50" />
 
-                    <FrameLayout
+                    <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textView48"
+                            android:id="@+id/textView11"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="left|center_vertical"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:gravity="left|center_vertical"
                             android:text="TextView" />
 
                         <TextView
-                            android:id="@+id/textView47"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="right|center_vertical"
+                            android:id="@+id/textView41"
+                            android:layout_width="80dp"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
                             android:text="TextView" />
-                    </FrameLayout>
+                    </LinearLayout>
+
                 </LinearLayout>
 
                 <Button
                     android:id="@+id/btnDescricao"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="56dp"
                     android:backgroundTint="@color/white"
                     android:text="Descrição"
                     android:textAlignment="center"
